# rag-project

./: .env.example  CONFIGURATION.md  DOCUMENT_ISOLATION_ARCHITECTURE.md  DOCUMENT_ISOLATION_CRITICAL_FIXES.md  DOCUMENT_ISOLATION_FIX.md  DOCUMENT_PREVIEW_DIAGRAMS.md  DOCUMENT_PREVIEW_FEATURE.md  DOCUMENT_PREVIEW_IMPLEMENTATION.md  DOCUMENT_PREVIEW_INDEX.md  DOCUMENT_PREVIEW_QUICKREF.md  Dockerfile  Dockerfile.nginx  FRONTEND_BUILD_FIXES.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  OPENROUTER_GUIDE.md  OPENROUTER_QUICKSTART.md  OPENROUTER_USAGE.md  PROJECT_COMPLETE.txt  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_FIX_REFERENCE.md  README.md  README_DOCUMENT_PREVIEW.md  README_FIXES_SUMMARY.md  UI_FIXES_QUICK_REF.md  alembic.ini  app.ipynb  docker-compose.yml  migrate.sh  nginx.conf  pyproject.toml  setup.sh  setup_document_preview.sh  test_document_fixes.py  test_document_isolation.sh  test_openrouter.py  verify_install.py
alembic/: env.py
alembic/versions/: 904dda745ee3_initial_migration.py  add_message_document_matches.py  add_thread_and_conversation_docs.py
config/: llm_config.toml
data/uploads/: GETTING_STARTED.md  OPENROUTER_QUICKREF.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  UI_FIXES.md
examples/: examples.py  openrouter_example.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  client.ts.backup
frontend/src/components/auth/: Login.tsx  Register.tsx
frontend/src/components/chat/: Chat.tsx  ConversationList.tsx  DocumentPreview.tsx  DocumentUpload.tsx  MessageList.tsx  ModelSelector.tsx
frontend/src/components/layout/: Layout.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/styles/: markdown.css
src/: .gitignore  examples.py
src/llm_pkg/: __init__.py  app.py  chat_router.py  cli.py  config.py  document_processor.py  qa_engine.py  storage.py
src/llm_pkg/auth/: router.py  utils.py
src/llm_pkg/database/: models.py
tests/: __init__.py  test_basic.py
tools/: openrouter_test.py  token_check.py
