[project]
name = "llm-pkg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tiktoken>=0.12.0",
    "torch>=2.8.0",
]

[project.scripts]
llm-pkg = "llm_pkg:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
